salesforce_sfdx/main/default/objects/OSFCL_Contacto_Principal__c/OSFCL_Contacto_Principal__c.object-meta.xml
<CustomObject>
    <description>Contacto Principal One ENGIE que pertenece como lista relacionada al Objeto &quot;Principales&quot; del Stakeholder</description>
    <label>Contacto Principal One ENGIE</label>
    <nameField>
        <label>Contacto Principal</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contactos Principales One ENGIE</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>