salesforce_sfdx/main/default/objects/OSFCL_Contacto_Principal__c/fields/OSFCL_Contacto__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Contacto__c</fullName>
    <description>Contacto relacionado al principal</description>
    <inlineHelpText>Ingrese el Contacto que queda asociado al Principal del stakeholder</inlineHelpText>
    <label>Contacto</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contactos Principales One ENGIE</relationshipLabel>
    <relationshipName>Contactos_Principales_One_ENGIE</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>