salesforce_sfdx/main/default/objects/OSFCL_Contacto_Principal__c/fields/OSFCL_Nombre_Contacto__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Nombre_Contacto__c</fullName>
    <formula>IF(
				ISBLANK(OSFCL_Contacto__r.FirstName),
				&quot;&quot;,
				OSFCL_Contacto__r.FirstName &amp; &quot; &quot;
)  &amp; OSFCL_Contacto__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Contacto</label>
    <type>Text</type>
</CustomField>