salesforce_sfdx/main/default/objects/OSFCL_Contacto_Principal__c/fields/OSFCL_Nombre_Principal__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Nombre_Principal__c</fullName>
    <formula>OSFCL_Principal__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Nombre Principal</label>
    <type>Text</type>
</CustomField>