salesforce_sfdx/main/default/objects/OSFCL_Contacto_Principal__c/fields/OSFCL_Principal__c.field-meta.xml
<CustomField>
    <fullName>OSFCL_Principal__c</fullName>
    <description>Contacto que queda asignado al Principal de cada Stakeholder</description>
    <label>Principal</label>
    <referenceTo>Principal__c</referenceTo>
    <relationshipLabel>Contactos Principales One ENGIE</relationshipLabel>
    <relationshipName>Contactos_Principales_One_ENGIE</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>